--- a/jscomp/stdlib/Makefile.shared
+++ b/jscomp/stdlib/Makefile.shared
@@ -22,7 +22,8 @@ CAMLC=$(CAMLRUN) $(COMPILER)
 #COMPFLAGS=-strict-sequence -w +33..39 -g -warn-error A -bin-annot -nostdlib \
 #          -safe-string
 COMPFLAGS=-strict-sequence -w +33..39 -g -warn-error A  -nostdlib \
-          -safe-string
+          -safe-string 
+# -js-module goog
 
 # OPTCOMPILER=ocamlopt.opt
 # CAMLOPT=$(CAMLRUN) $(OPTCOMPILER)
