--- a/jscomp/stdlib/Makefile.shared
+++ b/jscomp/stdlib/Makefile.shared
@@ -16,7 +16,7 @@
 # CAMLYACC ?= ../boot/ocamlyacc
 # TARGET_BINDIR ?= $(BINDIR)
 
-COMPILER=../bin/osc
+COMPILER=../bin/bsc
 CAMLC=$(CAMLRUN) $(COMPILER)
 
 #COMPFLAGS=-strict-sequence -w +33..39 -g -warn-error A -bin-annot -nostdlib \
