--- a/jscomp/lib/Makefile
+++ b/jscomp/lib/Makefile
@@ -5,6 +5,7 @@ CAMLC=../bin/bsc
 SOURCE_LIST := $(shell cat lib.mllib)
 
 RUNTIME := $(addsuffix .cmj, $(SOURCE_LIST))
+# COMPFLAGS += -js-module goog:buckle.js
 
 $(RUNTIME): $(CAMLC)
 
