--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "scripts": {
       "test": 
       "node ./node_modules/mocha/bin/mocha './jscomp/test/**/*_test.js'  -R spec",
+      "wtest": 
+      "node ./node_modules/mocha/bin/mocha './jscomp/test/**/*_test.js'  -R spec -w",
       "cover" : 
       "node ./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/.bin/_mocha --   jscomp/test/*test.js"
 
