--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
     "babel-cli": "^6.3.17",
     "benchmark": "^2.1.0",
     "istanbul": "^0.4.2",
-    "google-closure-compiler": "^20160208.5.0",
     "karma": "^0.13.9",
     "karma-jasmine-html-reporter": "^0.1.8",
-    "lodash": "^3.10.1",
     "mocha": "^2.3.4",
     "should": "^7.0.4",
     "should-equal": "^0.5.0",
-    "typescript": "^1.7.5",
-    "uglify-js": "^2.6.1",
-    "webpack": "^1.12.6"
+    "uglify-js": "^2.6.1"
   },
   "scripts": {
       "test": 
