--- a/jscomp/runtime/Makefile
+++ b/jscomp/runtime/Makefile
@@ -7,7 +7,7 @@ SOURCE_LIST := $(shell cat runtime.mllib)
 RUNTIME := $(addsuffix .cmj, $(SOURCE_LIST))
 
 # COMPFLAGS := -js-module amdjs
-COMPFLAGS += -w -40 -safe-string 
+COMPFLAGS += -w -40
 # COMPFLAGS += -js-module goog:buckle.runtime
 
 
