[refact] remove some stale files, rename .depend to .dirdepend, clean makefile to prepare npm dist

--- a/jscomp/lib/Makefile
+++ b/jscomp/lib/Makefile
@@ -27,8 +27,8 @@ clean::
 .ml.cmj:
 	$(CAMLC) $(INCLUDES) $(COMPFLAGS)  -c $<
 
--include .depend
+-include .libdepend
 
 depend:
-	$(CAMLDEP) $(INCLUDES) *.mli *.ml | sed -e 's/\.cmx/.cmj/g' > .depend
+	$(CAMLDEP) $(INCLUDES) *.mli *.ml | sed -e 's/\.cmx/.cmj/g' > .libdepend
 
