[feature] provide stand alone compiler based on improved bundler

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -37,11 +37,11 @@ release:snapshot
 # Carefully check the stored data if it is platform independent
 
 ./bin/ocaml_pack: ./bin/ocaml_pack.mli ./bin/ocaml_pack.ml 
-	ocamlopt.opt -w -a -I +compiler-libs ocamlcommon.cmxa $< -o $@
+	ocamlopt.opt -w -a -I bin -I +compiler-libs ocamlcommon.cmxa $^ -o $@
 
 snapshot: ./bin/ocaml_pack snapshotcmj
 	@echo "Snapshot"
-	$^ compiler.mllib > bin/compiler.ml
+	$< compiler.mllib > bin/compiler.ml
 
 snapshotcmj:
 	@echo "Collecting cmj files"
