--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "scripts": {
     "test":
-      "node ./node_modules/mocha/bin/mocha './lib/js/test/*_test.js' ",
+      "node ./node_modules/mocha/bin/mocha './lib/js/test/**/*_test.js' ",
     "wtest": 
-      "node ./node_modules/mocha/bin/mocha './lib/js/test/*_test.js'  -R spec -w",
+      "node ./node_modules/mocha/bin/mocha './lib/js/test/**/*_test.js'  -R spec -w",
     "cover":
-      "node ./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/.bin/_mocha --   ./lib/js/test/*test.js",
+      "node ./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/.bin/_mocha --   ./lib/js/test/**/*test.js",
     "coverage": 
       "`npm bin`/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --  './lib/js/test/*test.js' -R spec",
     "coveralls": "npm run-script coverage && node ./node_modules/.bin/coveralls < coverage/lcov.info"
