--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -131,9 +131,10 @@ travis-world-test:./bin/ocaml_pack
 # no depend on ./bin/ocaml_pack ./bin/bsc
 # since in npm mode, they are generated from a single file
 install:
-	cp ./bin/ocaml_pack ./bin/bsc ../bin
-	cp ./runtime/*.cmt* ../lib/ocaml
-	cp ./stdlib/*.cm* ../lib/ocaml
+	cp ./bin/ocaml_pack ./bin/bsc ../bin/
+	cp ./runtime/*.cmt* ../lib/ocaml/
+	cp ./runtime/*.cmj* ../lib/ocaml/
+	cp ./stdlib/*.cm* ../lib/ocaml/
 
 .PHONY: stdlib
 .PHONY: test  quicktest release snapshot snapshotcmj
