--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 env:
   - OCAML=4.02.3
+  - BS_TRAVIS_CI=1
 node_js:
   - "4.0"
-
-before_script: bash -ex .travis-ci-before-script.sh
 
 script: npm run coveralls
 
