--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-cli": "^6.3.17",
     "benchmark": "^2.1.0",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.2",
@@ -15,13 +13,47 @@
   },
   "scripts": {
     "test":
-      "node ./node_modules/mocha/bin/mocha './lib/js/test/**/*_test.js' ",
+      "mocha './lib/js/test/**/*_test.js' ",
     "wtest": 
-      "node ./node_modules/mocha/bin/mocha './lib/js/test/**/*_test.js'  -R spec -w",
+      "mocha './lib/js/test/**/*_test.js'  -R spec -w",
     "cover":
       "node ./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/.bin/_mocha --   ./lib/js/test/**/*test.js",
     "coverage": 
       "`npm bin`/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --  './lib/js/test/*test.js' -R spec",
-    "coveralls": "npm run-script coverage && node ./node_modules/.bin/coveralls < coverage/lcov.info"
-  }
+    "coveralls": "npm run-script coverage && node ./node_modules/.bin/coveralls < coverage/lcov.info",
+      "postinstall" : "./.travis-ci.sh"
+
+  },
+
+    "name": "bs-platform",
+    "version": "0.2.0",
+    "description": "bucklescript compiler, ocaml standard libary by bucklescript and its required runtime support",
+
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/bloomberg/bucklescript.git"
+    },
+    "keywords": [
+        "ocaml",
+        "bucklescript",
+        "stdlib",
+        "functional programming"
+    ],
+
+    "author": {
+        "name": "Hongbo Zhang"
+    },
+    "maintainers" : 
+    [
+        {
+            "name" : "hongbo_zhang",
+            "email" : "bobzhang1988@gmail.com"
+        }
+    ],
+    "license": "see LICENSE",
+    "bugs": {
+        "url": "https://github.com/bloomberg/bucklescript/issues"
+    },
+    "homepage": "https://github.com/bloomberg/bucklescript#readme"
+
 }
