update depends in test dir and add a dummy bin/bsc for npm

--- a/.gitignore
+++ b/.gitignore
@@ -12,72 +12,44 @@ _build
 *.cma
 *.a
 *.cmxa
-
-
-exports.js
-*.lambda
-*.rawlambda
-node_modules
-*.o
-*.lam
-err.log
-.idea
-ocaml_pack
-*.0.js
-*~
-stdlib/c.js
-*.map
-*#
-qcc/
-.#*
-# jscomp/stdlib/external/*.js
-oxml
-*.cmj
-
-*.rawlambda
-*.lambda
-
-
-ocaml/
-
-
-test.json
 *~
 *.annot
 *.mj
-
 *.bak
 .vscode
 *.jsx
+*.lambda
+*.rawlambda
+*.o
+*.lam
+*.0.js
+*#
+*.log
+.#*
+*.cmj
+*.rawlambda
+*.lambda
+*.zip
+*.gz
+!ocaml.tar.gz
+# special file 
+ocaml_pack
 bsc
 bscc
-
 ocaml_pack0.ml
 ocaml_pack1.ml
-
-
+.idea
+exports.js
+node_modules
+oxml
+test.json
 jscomp/pre_load.js
 boot
 *.dump
-
 coverage
-*.log
-./jscomp/output
 *.g.js
 dist/
-
-bin/
 man/
-lib/ocaml/*.ml
-lib/ocaml/*.mli
-lib/ocaml/caml
-lib/ocaml/VERSION
-lib/ocaml/camlheader
-lib/ocaml/camlheader_ur
-lib/ocaml/expunge
-lib/ocaml/ld.conf
-lib/ocaml/objinfo_helper
-lib/ocaml/vmthreads/
-lib/ocaml/Makefile.config
-lib/ocaml/extract_crc
-
+lib/ocaml
+bin/*
+!bin/bsc
