--- a/docs/package.json
+++ b/docs/package.json
@@ -3,6 +3,8 @@
     "marked": "^0.3.5"
   },
   "devDependencies": {
-    "glob": "^7.0.3"
+    "glob": "^7.0.3",
+    "handlebars": "^4.0.5",
+    "marked": "^0.3.5"
   }
 }
