more clean api (+3 squashed commits) Squashed commits: [f5f00dd] split js into js_types, provide Js.null and Js.undefined [b034aff] more docs and more tests [f479a48] more tests for type safe typeof (+2 squashed commits) Squashed commits: [17fe000] more ides [94f4314] more bindings for node and practical solution to get typesafe typeof

--- a/jscomp/others/Makefile
+++ b/jscomp/others/Makefile
@@ -2,9 +2,9 @@ include ../Makefile.shared
 
 COMPILER=../bin/bsc
 
-MAP_FILES= bs_node 
+MAP_FILES= node 
 
-SOURCE_LIST=  bs_node_path bs_node_fs bs_node_process bs_dict bs_node_module js_array js_string js_re
+SOURCE_LIST=  node_path node_fs node_process dict node_module js_array js_string js_re node_buffer js_types
 
 $(addsuffix .cmj, $(SOURCE_LIST)): $(addsuffix .cmj, $(MAP_FILES))
 
