Make windows work

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -1,9 +1,14 @@
 
 NATIVE=ocamlopt.opt
 BYTE=ocamlc.opt
-
 CAMLP4OF=camlp4of
 
+ifdef WIN32
+	EXE := .exe
+endif
+ifndef EXE
+	EXE := # empty
+endif
 js_map.ml:js_map.mlp j.ml
 	@echo "Regenrating j_map.ml"
 	$(CAMLP4OF) -filter map -filter trash -impl $< -printer o > $@
@@ -12,16 +17,16 @@ js_fold.ml:js_fold.mlp j.ml
 	@echo "Regenrating j_fold.ml"
 	$(CAMLP4OF) -filter fold  -filter trash -impl $< -printer o > $@
 
-lam_map.ml: lambda_map.mlp lambda.mlp 
+lam_map.ml: lambda_map.mlp lambda.mlp
 	@echo "Regenrating lambda_map.ml"
 	$(CAMLP4OF) -filter map -filter trash -impl $< -printer o > $@
 
-lam_fold.ml: lambda_fold.mlp lambda.mlp 
+lam_fold.ml: lambda_fold.mlp lambda.mlp
 	@echo "Regenrating lambda_map.ml"
 	$(CAMLP4OF) -filter map -filter trash -impl $< -printer o > $@
 
 
-release:snapshot 
+release:snapshot
 	$(MAKE) releasebuild
 	# ocamlbuild -no-ocamlfind -lflags -no-check-prims -use-ocamlfind -I bin -no-hygiene -pkgs compiler-libs.common -no-links bin/reason.byte
 	# js_of_ocaml -I +compiler-libs   --toplevel +weak.js +toplevel.js  ./polyfill.js _build/bin/reason.byte -I ./runtime/ --file js.cmi:/cmis/js.cmi --file js_unsafe.cmi:/cmis/js_unsafe.cmi --file js_re.cmi:/cmis/js_re.cmi   -o bin/compiler.js
@@ -34,7 +39,7 @@ release:snapshot
 # TODO: should be done after we do the build
 # Carefully check the stored data if it is platform independent
 
-./bin/bspack: ./bin/bspack.mli ./bin/bspack.ml 
+./bin/bspack$(EXE): ./bin/bspack.mli ./bin/bspack.ml
 	$(NATIVE) -w -a -I bin  unix.cmxa  $^ -o $@
 
 ./bin/whole_compiler.ml:./bin/bspack
@@ -44,14 +49,12 @@ release:snapshot
 
 
 # For faster compilation when can cache ast file instead for Linux/MacOS users
-# For windows user, we just ship the binary 
-./bin/bsc.exe: ./bin/config.mli ./bin/config.ml  ./bin/whole_compiler.mli ./bin/whole_compiler.ml 
-	$(NATIVE) -w -a -I bin $^ -o $@
+# For windows user, we just ship the binary
 ./bin/bsc: _build/ext/ext.cmxa _build/common/common.cmxa _build/depends/depends.cmxa _build/syntax/syntax.cmxa _build/core.cmxa
 	echo "Linking"
 	$(NATIVE) -g -linkall -o $@ -I +compiler-libs ocamlcommon.cmxa  $^  2>>build.compile
 
-./bin/bsppx: ./bin/bs_ppx.mli ./bin/bs_ppx.ml 
+./bin/bsppx$(EXE): ./bin/bs_ppx.mli ./bin/bs_ppx.ml
 	$(NATIVE) -g -inline 1000 -linkall -w -a -I bin -I +compiler-libs ocamlcommon.cmxa   $^ -o $@
 
 releasebuild:./bin/bspack
@@ -64,7 +67,7 @@ releasebuild:./bin/bspack
 snapshot: ./bin/bspack snapshotcmj
 	$(MAKE) snapshotml
 
-snapshotml:./bin/bspack ./bin/compiler.mllib 
+snapshotml:./bin/bspack ./bin/compiler.mllib
 	@echo "Snapshot ml"
 	$< -bs-mllib bin/compiler.mllib -o bin/compiler.ml
 	$< -I common -I ext -I syntax -bs-main bs_ppx_main.ml -o bin/bs_ppx.ml
@@ -74,28 +77,18 @@ snapshotcmj:
 
 # git diff bin/bspack.ml
 # bootbspack requires ../ocaml has parser, lexer processed by ocamlyacc and ocamllex
-bootbspack: ./bin/bspack
+bootbspack: ./bin/bspack$(EXE)
 	@echo "Bootstrap bspack"
-	./bin/bspack -bs-log-mllib bin/bspack.mllib -prelude bin/bspack_config.ml -bs-exclude-I clflags -bs-exclude-I config  -I ../ocaml/parsing/ -I ../ocaml/utils/ -I ext -I common -I depends -bs-main bspack_main.ml -o bin/bspack.ml
-	$(NATIVE) -w -40  unix.cmxa  -I bin bin/bspack.mli bin/bspack.ml -o bin/bspack
+	./bin/bspack$(EXE) -bs-log-mllib bin/bspack.mllib -prelude bin/bspack_config.ml -bs-exclude-I clflags -bs-exclude-I config  -I ../ocaml/parsing/ -I ../ocaml/utils/ -I ext -I common -I depends -bs-main bspack_main.ml -o bin/bspack.ml
+	$(NATIVE) -w -40  unix.cmxa  -I bin bin/bspack.mli bin/bspack.ml -o bin/bspack$(EXE)
 	@echo "Using the bootstrapped bspack to genreate new bspack.ml: `date`"
-	./bin/bspack -bs-log-mllib bin/bspack.mllib -prelude bin/bspack_config.ml -bs-exclude-I clflags -bs-exclude-I config  -I ../ocaml/parsing/ -I ../ocaml/utils/ -I ext -I common -I depends -bs-main bspack_main.ml -o bin/bspack.ml
+	./bin/bspack$(EXE) -bs-log-mllib bin/bspack.mllib -prelude bin/bspack_config.ml -bs-exclude-I clflags -bs-exclude-I config  -I ../ocaml/parsing/ -I ../ocaml/utils/ -I ext -I common -I depends -bs-main bspack_main.ml -o bin/bspack.ml
 	@echo "Bootstrap seems finished, please check diffs in bspack"
 	@echo "Rebuilding bspack"
-	make -B ./bin/bspack
+	make -B ./bin/bspack$(EXE)
 	@echo "Rebuilding bspack finsihed"
 
-
-
-
-stdlib:
-	cd stdlib && ./build.sh
-
-world:
-	@echo "Making compiler"		
-	$(MAKE) releasebuild
-	@echo "Making compiler finished"
-
+libs:
 	@echo "Making stdlib cmis"
 	cd stdlib && $(MAKE) allcmis
 	@echo "Making stdlib finished"
@@ -113,6 +106,19 @@ world:
 	cd others && $(MAKE) all
 	@echo "Making others finished"
 
+world:
+	@echo "Making compiler"
+	$(MAKE) releasebuild
+	@echo "Making compiler finished"
+	$(MAKE) libs
+windows-world:
+	@echo "Making compiler"
+	$(NATIVE) -w -a -I bin ./bin/config.mli ./bin/config.ml  ./bin/whole_compiler.mli ./bin/whole_compiler.ml -o bin/bsc$(EXE)
+	$(MAKE) bin/bsc$(EXE)
+	$(MAKE) bin/bspack$(EXE)
+	$(MAKE) bin/bsppx$(EXE)
+	$(MAKE) libs
+
 world-test:
 	$(MAKE) world
 	@echo "Making test"
@@ -122,28 +128,15 @@ world-test:
 travis-world-test:./bin/bspack
 	@echo "Generating the compiler"
 	rm -f bin/compiler.ml bin/bs_ppx.ml
-	$(MAKE) snapshotml	
-	@echo "Generating the compiler finished"	
+	$(MAKE) snapshotml
+	@echo "Generating the compiler finished"
 	$(MAKE) world-test
 
 install:
-	cp  ./bin/bsc ./bin/bsppx  ./bin/bspack ../bin/
+	cp  ./bin/bsc$(EXE) ./bin/bsppx$(EXE)  ./bin/bspack$(EXE) ../bin/
 	cp ./runtime/*.cmt* ./runtime/*.cmj* ./stdlib/*.cm* ./others/*.ml ./others/*.mli  ./others/*.cm* ../lib/ocaml/
 	cp ./runtime/js.ml  ./runtime/js.cmi ./runtime/js_unsafe.cmi ./runtime/js_null.ml ./runtime/js_null.cmi \
-	./runtime/js_undefined.ml ./runtime/js_undefined.cmi ./runtime/js_null_undefined.ml ./runtime/js_null_undefined.cmi  ../lib/ocaml/	
+	./runtime/js_undefined.ml ./runtime/js_undefined.cmi ./runtime/js_null_undefined.ml ./runtime/js_null_undefined.cmi  ../lib/ocaml/
 
 
-
-
-
-
-
-
-.PHONY: stdlib
-.PHONY: test  quicktest release snapshot snapshotcmj releasebuild
-
-
-
-
-
-
+.PHONY: test  quicktest release snapshot snapshotcmj releasebuild libs
