--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ _build
 *.cma
 *.a
 *.cmxa
-*~
+*.obj
+ *~
 *.annot
 *.mj
 *.bak
@@ -32,13 +33,12 @@ _build
 *.lambda
 *.zip
 *.gz
-# special file 
+# special file
 
 bsc
 bscc
 bsppx
-jscomp/tools/ocamlpack*
-
+jscomp/bin/config.ml
 .idea
 
 node_modules
